# kiibohd-firmware

./: Cargo.toml  Makefile.toml  deny.toml
.github/workflows/: audit.yml  rust_linux.yml
common/: build.rs  common_makefile.toml
common/atsam4s/: CHANGELOG.md  Cargo.toml  README.md  build.rs
common/atsam4s/src/: constants.rs  hall_effect.rs  hidio.rs  issi_spi.rs  keyscanning.rs  lib.rs
common/cargo/: config_atsam4s8b.toml
common/memory/: atsam4s8b.x
common/xtask/: Cargo.toml
common/xtask/src/: main.rs
hexgears/gemini/: CHANGELOG.md  Cargo.toml  project.env
hexgears/gemini/.cargo/: config.toml
hexgears/gemini/src/: bin.rs  constants.rs  hidio.rs  lib.rs
inputclub/keyboards/keystone/fullsize/: CHANGELOG.md  Cargo.toml  README.md  project.env  scancode_map.kll
inputclub/keyboards/keystone/fullsize/.cargo/: config.toml
inputclub/keyboards/keystone/fullsize/src/: bin.rs  constants.rs  lib.rs
inputclub/keyboards/keystone/tkl/: CHANGELOG.md  Cargo.toml  project.env
inputclub/keyboards/keystone/tkl/src/: bin.rs  constants.rs  hidio.rs
inputclub/keyboards/kira/: CHANGELOG.md  Cargo.toml  README.md  project.env  scancode_map.kll
inputclub/keyboards/kira/.cargo/: config.toml
inputclub/keyboards/kira/src/: bin.rs  constants.rs  lib.rs
