[package]
name = "kiibohd-atsam4s"
version = "0.1.1"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
edition = "2021"
description = "Common rtic.rs functions for atsam4s firmware"
keywords = ["arm", "cortex-m", "atsam4", "atsam4s", "atsam4s8b", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kiibohd/kiibohd-firmware"

[lib]
path = "src/lib.rs"

[dependencies]
const_env = "0.1"
cortex-m = "0.7"
cortex-m-rt = { version = "0.7" }
defmt = "0.3"
defmt-rtt = "0.3"
embedded-hal = "0.2.7"
fugit = { version = "0.3", features = ["defmt"] }
heapless = "0.7"
is31fl3743b = { version = "0.1", optional = true }
kiibohd-keyscanning = { version = "0.1", features = ["kll-core", "defmt"] }
kiibohd-hall-effect-keyscanning = { version = "0.2", features = ["kll-core", "defmt"], optional = true }
kiibohd-hid-io = { version = "0.1", features = ["defmt"] }
kiibohd-usb = { version = "0.1", features = ["kll-core", "defmt"] }
kll-core = { version = "0.1", default-features = false, features = ["defmt"] }
nb = "1.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
paste = "1.0"

[dependencies.atsam4-hal]
version = "0.3.1"
default-features = false
features = ["atsam4s8b", "usb"]

[features]
default = []

hall-effect = ["dep:kiibohd-hall-effect-keyscanning"]
keyscanning = []
issi-spi = ["dep:is31fl3743b"]
