[package]
name = "gemini"
version = "0.1.0"
authors = ["Jacob Alexander <haata@kiibohd.com>", "Zion Koyl <hiszd1@gmail.com>"]
edition = "2021"
description = "Hexgears Gemini Dusk/Dawn Keyboard"
keywords = ["arm", "cortex-m", "atsam4", "atsam4s", "atsam4s8b", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kiibohd/kiibohd-firmware"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gemini"
path = "src/bin.rs"

[dependencies]
const_env = "0.1"
cortex-m-rtic = "1.1.3"
defmt = "0.3"
dwt-systick-monotonic = "1.1"
kiibohd-atsam4s = { path = "../../common/atsam4s", features = ["keyscanning"] }
kiibohd-keyscanning = { version = "0.1", features = ["kll-core", "defmt"] }
paste = "1.0"

[build-dependencies]
dotenvy = "0.15"
kll-compiler = "0.1"
vergen = { version = "7.4", default-features = false, features = ["git"] }
