[package]
name = "kira96"
version = "0.1.1"
authors = ["Jacob Alexander <haata@kiibohd.com>", "Zion Koyl <hiszd1@gmail.com>"]
edition = "2021"
description = "Input Club Kira Keyboard"
keywords = ["arm", "cortex-m", "atsam4", "atsam4s", "atsam4s8b", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kiibohd/kiibohd-firmware"

[lib]
path = "src/lib.rs"

[[bin]]
name = "kira"
path = "src/bin.rs"

[dependencies]
const_env = "0.1"
defmt = "0.3"
kiibohd-atsam4s = { path = "../../../common/atsam4s", features = ["keyscanning"] }
paste = "1.0"
rtic = { version = "2.0.0", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.0.0", features = ["cortex-m-systick"] }

[build-dependencies]
dotenvy = "0.15"
kll-compiler = "0.1"
vergen = { version = "7.4", default-features = false, features = ["git"] }
