[package]
name = "keystonefs"
version = "0.1.0"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
edition = "2021"
description = "Input Club - Keystone - Fullsize analog keyboard firmware"
keywords = ["arm", "cortex-m", "atsam4", "atsam4s", "atsam4s8b", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kiibohd/kiibohd-firmware"

[lib]
path = "src/lib.rs"

[[bin]]
name = "keystonefs"
path = "src/bin.rs"

[dependencies]
const_env = "0.1"
cortex-m-rtic = "1.1.3"
defmt = "0.3"
dwt-systick-monotonic = "1.0"
kiibohd-atsam4s = { path = "../../../../common/atsam4s", features = ["hall-effect", "issi-spi"] }
paste = "1.0"

[build-dependencies]
dotenvy = "0.15"
kll-compiler = "0.1"
vergen = { version = "7.4", default-features = false, features = ["git"] }
